# WordHuntSolver

ClapSean/: CMakeLists.txt  fileReader.cpp  fileReader.h  lotawords.txt  main.cpp  morewords.txt  node.cpp  node.h  permutation.cpp  permutation.h  trie.cpp  trie.h
ClapSean/src/: fileReader.h  hashCheck.cpp  main.cpp  node.h  permutation.cpp  profiler.h  tests.h  trie.h
NerdleSolver/: CMakeLists.txt  expressionEvaluation.cpp  expressionEvaluation.h  main.cpp  permutationGeneration.cpp  permutationGeneration.h
WordHuntSolver/: bruh
WordHuntSolver/src/: fileReader.cpp  hashCheck.h  node.cpp  profiler.cpp  tests.cpp  trie.cpp
